force-app/main/default/objects/Legal_Advisor__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>