force-app/main/default/objects/Legal_Advisor__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Legal Advisor</relationshipLabel>
    <relationshipName>Legal_Advisor</relationshipName>
    <type>Lookup</type>
</CustomField>