force-app/main/default/objects/Legal_Advisor__c/fields/Count_Clients__c.field-meta.xml
<CustomField>
    <fullName>Count_Clients__c</fullName>
    <label>Count Clients</label>
    <summaryForeignKey>Client__c.Legal_Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>