force-app/main/default/objects/Legal_Advisor__c/fields/Universal_Company_Clients__c.field-meta.xml
<CustomField>
    <fullName>Universal_Company_Clients__c</fullName>
    <label>Universal Company Clients</label>
    <summaryForeignKey>Client__c.Legal_Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>