force-app/main/default/objects/Legal_Advisor__c/recordTypes/Legal_Accounts_Update.recordType-meta.xml
<RecordType>
    <fullName>Legal_Accounts_Update</fullName>
    <active>true</active>
    <label>Legal Accounts Update</label>
</RecordType>